@@ -10,6 +10,10 @@
 //
 // RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES
 
+VERSION OF 27-07-2023
+---------------------
+1) Fix for navigating StyleComboBox lists with the keyboard cursur keys
+
 VERSION OF 05-06-2023
 ---------------------
 1) It is now possible to create StyleComboBox'es that can have a non-standard height.
